--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/flannel/install-for-flannel.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/flannel/install-for-flannel.mdx
@@ -46,7 +46,7 @@ The procedure differs according to your datastore type. Refer to the section tha
    curl {{manifestsUrl}}/manifests/canal.yaml -O
    ```
 
-1. <PodCidrSed yaml='canal' />
+1. If your cluster is configured to use pod CIDR 10.244.0.0/16, skip to the next step. If your cluster is configured to use a different pod CIDR, replace 10.244.0.0/16 in the downloaded manifest with the correct pod-cidr.
 
 1. Issue the following command to install {{prodname}}.
 
@@ -75,7 +75,7 @@ etcd, complete the following steps.
    curl {{manifestsUrl}}/manifests/canal-etcd.yaml -O
    ```
 
-1. <PodCidrSed yaml='canal-etcd' />
+1. If your cluster is configured to use pod CIDR 10.244.0.0/16, skip to the next step. If your cluster is configured to use a different pod CIDR, replace 10.244.0.0/16 in the downloaded manifest with the correct pod-cidr.
 
 1. In the `ConfigMap` named `calico-config`, set the value of
    `etcd_endpoints` to the IP address and port of your etcd server.
