--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -99,7 +99,9 @@ The option, **Kubernetes API datastore, more than 50 nodes** provides scaling us
    curl {{manifestsUrl}}/manifests/calico.yaml -O
    ```
 
-1. <PodCidrSed yaml='calico' />
+1. If you are using pod CIDR `192.168.0.0/16`, skip to the next step.
+   If you are using a different pod CIDR with kubeadm, no changes are required &#8212; Calico will automatically detect the CIDR based on the running configuration.
+   For other platforms, make sure you uncomment the CALICO_IPV4POOL_CIDR variable in the manifest and set it to the same value as your chosen pod CIDR.
 1. Customize the manifest as necessary.
 1. Apply the manifest using the following command.
 
@@ -122,7 +124,9 @@ The geeky details of what you get:
    curl {{manifestsUrl}}/manifests/calico-typha.yaml -o calico.yaml
    ```
 
-1. <PodCidrSed yaml='calico' />
+1. If you are using pod CIDR `192.168.0.0/16`, skip to the next step.
+   If you are using a different pod CIDR with kubeadm, no changes are required &#8212; Calico will automatically detect the CIDR based on the running configuration.
+   For other platforms, make sure you uncomment the CALICO_IPV4POOL_CIDR variable in the manifest and set it to the same value as your chosen pod CIDR.
 1. Modify the replica count to the desired number in the `Deployment` named, `calico-typha`.
 
    ```yaml noValidation
@@ -178,7 +182,9 @@ The **etcd** database is not recommended for new installs. However, it is an opt
    curl {{manifestsUrl}}/manifests/calico-etcd.yaml -o calico.yaml
    ```
 
-1. <PodCidrSed yaml='calico' />
+1. If you are using pod CIDR `192.168.0.0/16`, skip to the next step.
+   If you are using a different pod CIDR with kubeadm, no changes are required &#8212; Calico will automatically detect the CIDR based on the running configuration.
+   For other platforms, make sure you uncomment the CALICO_IPV4POOL_CIDR variable in the manifest and set it to the same value as your chosen pod CIDR.
 1. In the `ConfigMap` named, `calico-config`, set the value of `etcd_endpoints` to the IP address and port of your etcd server.
    :::note
 
