Adds websites to skip list for testing

--- a/calico-enterprise/about/index.mdx
+++ b/calico-enterprise/about/index.mdx
@@ -40,7 +40,7 @@ It is not easy navigating the cultural shifts that come with adopting Kubernetes
 Tigera's Customer Success has invested heavily in custom and self-service training to address these obstacles. Guided by their best-practices-to-production workflows, you can keep progressing and join the growing list of companies who are in production with {{prodname}}.
 
 - [Services, education, and support](https://www.tigera.io/customer-success/)
-- To get a personalized demo based on your requirements, upgrade from Calico Open Source, partner with us, or if you have a question, see [Contact us](https://www.tigera.io/contact/)
+- To get a personalized demo based on your requirements, upgrade from Calico Open Source, partner with us, or if you have a question, see [Contact us](https://tigera.io/contact)
 
 ## Need more info?
 
