--- a/calico-enterprise_versioned_docs/version-3.17/reference/faq.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/faq.mdx
@@ -295,7 +295,7 @@ If this describes your infrastructure,
 what to do. Otherwise, if you have a layer 3 (IP) fabric, then there are
 detailed datacenter networking recommendations given
 in [{{prodname}} over IP fabrics](architecture/design/l3-interconnect-fabric.mdx).
-We'd also encourage you to [get in touch](https://www.projectcalico.org/contact/)
+We'd also encourage you to [get in touch](https://www.projectcalico.org/contact)
 to discuss your environment.
 
 ### How can I enable NAT for outgoing traffic from containers with private IP addresses?
