--- a/calico-cloud/get-started/connect/connect-cluster.mdx
+++ b/calico-cloud/get-started/connect/connect-cluster.mdx
@@ -49,6 +49,8 @@ For details of the migration script, see [Uninstall {{prodname}} from a cluster]
 - Registers the cluster so it can connect to {{prodname}}
 - Creates a global threat feed to alert on any egress traffic to addresses in the threat feed
 - Adds policies to secure communication for {{prodname}} components, including safeguards that prevent any new network policies from impacting the vital functions of the cluster
+- Creates roles and bindings to allow the installer to operate and to allow Calico Cloud to operate after installation.
+  Each of these objects is given minimal permissions for its specific function.
 - Creates roles and bindings for two user types for access to Manager UI:
   - **Admin** - full permissions for network policies and {{prodname}} resources, and read permissions for namespace and pods
   - **User** - read-only/view permissions to same resources above
