--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -8,14 +8,15 @@ description: What's new, and why features provide value for upgrading.
 
 ### New features and enhancements
 
-#### Limited permissions for Calico Cloud installer
+* We limited the permissions that are assigned to the Calico Cloud installer.
+  Previously, the installer had cluster administrator privileges.
+  Now the installer gets access only to what is required to install Calico Cloud.
+* **Image Assurance**. We added a filter that lets you sort your list of running images by severity rating.
 
-We limited the permissions that are assigned to the Calico Cloud installer.
-Previously, the installer was given cluster admininstrator privileges.
-Now the installer gets access only to what is required to install Calico Cloud.
+### Known issues
 
-Following this installer update, you may see an erroneous message about a failed installation that took place before the successful installation.
-You can disregard the failed installation message.
+* If you update your cluster to a previous version of Calico Cloud (18.0.0 or earlier), you may see an erroneous message about a failed installation that took place before the successful installation.
+  This failed installation message can be disregarded.
 
 ### Bug fixes
 
