--- a/calico-enterprise/reference/component-versions.mdx
+++ b/calico-enterprise/reference/component-versions.mdx
@@ -2,6 +2,8 @@
 description: A list of component versions for Calico Enterprise
 ---
 
+import ComponentVersions from '@site/calico-enterprise/_includes/components/ComponentVersions';
+
 # Component versions
 
 
