--- a/calico-enterprise_versioned_docs/version-3.18-2/reference/component-versions.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/reference/component-versions.mdx
@@ -2,6 +2,8 @@
 description: A list of component versions for Calico Enterprise
 ---
 
+import ComponentVersions from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/ComponentVersions';
+
 # Component versions
 
 
