--- a/calico_versioned_docs/version-3.27/reference/component-versions.mdx
+++ b/calico_versioned_docs/version-3.27/reference/component-versions.mdx
@@ -2,6 +2,8 @@
 description: A list of component versions for Calico
 ---
 
+import ComponentVersions from '@site/calico_versioned_docs/version-3.27/_includes/components/ComponentVersions';
+
 # Component versions
 
 
