Removes ReleaseNotes from global scope

--- a/calico_versioned_docs/version-3.24/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.24/release-notes/index.mdx
@@ -1,6 +1,9 @@
 ---
 description: What's new, and why features provide value for upgrading.
+title: Release notes
 ---
+
+import ReleaseNotes from '@site/calico_versioned_docs/version-3.24/_includes/components/ReleaseNotes';
 
 # Release notes
 
