--- a/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
@@ -1,5 +1,6 @@
 ---
 description: What's new, and why features provide value for upgrading.
+title: Release notes
 ---
 
 # Calico Cloud release notes
