--- a/calico-enterprise_versioned_docs/version-3.15/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/release-notes/index.mdx
@@ -1,6 +1,9 @@
 ---
 description: What's new, and why features provide value for upgrading.
+title: Release notes
 ---
+
+import ReleaseNotes from '@site/calico-enterprise_versioned_docs/version-3.15/_includes/components/ReleaseNotes';
 
 # Release notes
 
