--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -1,5 +1,6 @@
 ---
 description: What's new, and why features provide value for upgrading.
+title: Release notes
 ---
 
 # Calico Enterprise 3.18 release notes
