--- a/calico-cloud_versioned_docs/version-18-2/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/image-assurance/understanding-scan-results.mdx
@@ -20,12 +20,12 @@ To enable Running Images, click the **Setting** icon in the top right corner, th
 
 :::note
 
-If you are using the CLI scanner and your cluster does not use the default containerd socket path (`/run/containerd/containerd.sock`), you must change the path to allow the Running Images service to collect image information. To update the CRI socket path for a cluster, run the following command:
+If you are using the Runtime View and your cluster does not use the default containerd socket path (`/run/containerd/containerd.sock`), you must change the path to allow the Running Images service to collect image information. To update the CRI socket path for a cluster, run the following command:
 
 ```bash
 kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
 ```
-For details, see [Image Assurance installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec).
+For details, see [Image Assurance installation reference](../reference/installation/ia-api.mdx).
 
 :::
 
