--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/windows-calico/openshift-installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/windows-calico/openshift-installation.mdx
@@ -4,6 +4,12 @@ description: Install Calico Enterprise on an OpenShift 4 cluster on Windows node
 
 # Install an OpenShift 4 cluster on Windows nodes
 
+:::note
+
+Currently, {{prodnameWindows}} supports Openshift versions only up to v4.5 because it requires the Windows Machine Config Bootstrapper binary (wmcb.exe) for adding Windows nodes to clusters. OpenShift v4.6+ does not support the Windows Machine Config Bootstrapper binary and uses the Red Hat Windows Machine Config Operator (WMCO), which does not correctly recognize {{prodname}} networking in the cluster.
+
+:::
+
 ## Big picture
 
 Install an OpenShift 4 cluster on AWS with {{prodname}} on Windows nodes.
