--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/windows-calico/openshift-installation.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/windows-calico/openshift-installation.mdx
@@ -4,6 +4,12 @@ description: Install Calico on an OpenShift 4 cluster on Windows nodes
 
 # Install an OpenShift 4 cluster on Windows nodes
 
+:::note
+
+Currently, {{prodnameWindows}} supports Openshift versions only up to v4.5 because it requires the Windows Machine Config Bootstrapper binary (wmcb.exe) for adding Windows nodes to clusters. OpenShift v4.6+ does not support the Windows Machine Config Bootstrapper binary and uses the Red Hat Windows Machine Config Operator (WMCO), which does not correctly recognize {{prodname}} networking in the cluster.
+
+:::
+
 ## Big picture
 
 Install an OpenShift 4 cluster on AWS with {{prodname}} on Windows nodes.
@@ -242,7 +248,7 @@ curl https://github.com/openshift/windows-machine-config-bootstrapper/releases/d
 
 :::note
 
-For OpenShift 4.6, use the latest wmcb.exe for OpenShift 4.5. A wmcb.ex binary for OpenShift 4.6 is not published yet.
+For OpenShift 4.6, use the latest wmcb.exe for OpenShift 4.5. A wmcb.exe binary for OpenShift 4.6 is not published yet.
 
 :::
 
