--- a/calico_versioned_docs/version-3.27/getting-started/kubernetes/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/kubernetes/windows-calico/manual-install/openshift-installation.mdx
@@ -6,6 +6,12 @@ description: Install Calico on an OpenShift 4 cluster on Windows nodes
 
 :::note
 
+Currently, {{prodnameWindows}} supports Openshift versions only up to v4.5 because it requires the Windows Machine Config Bootstrapper binary (wmcb.exe) for adding Windows nodes to clusters. OpenShift v4.6+ does not support the Windows Machine Config Bootstrapper binary and uses the Red Hat Windows Machine Config Operator (WMCO), which does not correctly recognize {{prodname}} networking in the cluster.
+
+:::
+
+:::note
+
 The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
 
 :::
@@ -251,7 +257,7 @@ curl https://github.com/openshift/windows-machine-config-bootstrapper/releases/d
 
 :::note
 
-For OpenShift 4.6, use the latest wmcb.exe for OpenShift 4.5. A wmcb.ex binary for OpenShift 4.6 is not published yet.
+For OpenShift 4.6, use the latest wmcb.exe for OpenShift 4.5. A wmcb.exe binary for OpenShift 4.6 is not published yet.
 
 :::
 
