Improve helm docs

--- a/calico-enterprise_versioned_docs/version-3.18/getting-started/install-on-clusters/kubernetes/helm.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/getting-started/install-on-clusters/kubernetes/helm.mdx
@@ -40,7 +40,9 @@ In this guide, you install the Tigera Calico operator and custom resource defini
 
 ### Customize the Helm chart
 
-If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.
+If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize
+TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.
+Detailed information on customizing helm can be found in the [Helm Reference](../../../reference/installation/helm_customization.mdx) page.
 
 1. If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), set the `kubernetesProvider` as described in the [Installation reference](../../../reference/installation/api.mdx#operator.tigera.io/v1.Provider). For example:
 
