--- a/calico-enterprise/getting-started/install-on-clusters/kubernetes/helm.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/kubernetes/helm.mdx
@@ -40,7 +40,9 @@ In this guide, you install the Tigera Calico operator and custom resource defini
 
 ### Customize the Helm chart
 
-If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.
+If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize
+TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.
+Detailed information on customizing helm can be found in the [Helm Reference](../../../reference/installation/helm_customization.mdx) page.
 
 1. If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), set the `kubernetesProvider` as described in the [Installation reference](../../../reference/installation/api.mdx#operator.tigera.io/v1.Provider). For example:
 
@@ -85,7 +87,7 @@ To install a standard {{prodname}} cluster with Helm:
   <CodeBlock language='bash'>
      {'{{version}}' === 'master'
        ? `helm install {{prodnamedash}} tigera/tigera-operator --version tigera-operator-v0.0 \\
---set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
+--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-helm_customoperator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
 --set-file licenseKeyContent=<path/to/license/file/yaml> \\
 --namespace tigera-operator --create-namespace`
        : `helm install {{prodnamedash}} tigera/tigera-operator --version tigera-operator-{{chart_version_name}} \\
