DOCS-Clarify-AKS-requirements

--- a/calico-cloud/get-started/connect/requirements/aks.mdx
+++ b/calico-cloud/get-started/connect/requirements/aks.mdx
@@ -8,6 +8,11 @@ description: AKS-specific install requirements.
 
 Although {{prodname}} checks that your cluster meets [System requirements](system-requirements.mdx), verifying now can save you time troubleshooting.
 
+:::note
+
+To allow existing AKS managed clusters with Calico to be managed in the same deployment as new {{prodname}} clusters, you must change the CNI in those clusters to `None`.
+:::
+
 ## Verify AKS settings
 
 1. Check that you're using a supported CNI and network policy configuration by running the following command on your AKS cluster:
@@ -16,7 +21,7 @@ Although {{prodname}} checks that your cluster meets [System requirements](syste
    az aks show --query 'networkProfile'
    ```
 
-   You must have one of the following combinations of values for`networkPlugin` and `networkPolicy`:
+  You must have one of the following combinations of values for`networkPlugin` and `networkPolicy`:
 
    - `"networkPlugin": "none"` and `"networkPolicy": null`
    - `"networkPlugin": "azure"` and `"networkPolicy": null`
