--- a/calico-cloud/get-started/connect/requirements/aks.mdx
+++ b/calico-cloud/get-started/connect/requirements/aks.mdx
@@ -10,7 +10,7 @@ Although {{prodname}} checks that your cluster meets [System requirements](syste
 
 :::note
 
-To allow existing AKS managed clusters with Calico to be managed in the same deployment as new {{prodname}} clusters, you must change the CNI in those clusters to `None`.
+To allow existing AKS managed clusters with Calico to be managed in the same deployment as new {{prodname}} clusters without conflict, you must change the `networkPlugin` to `none`.
 :::
 
 ## Verify AKS settings
