Temporary fixes for bad variable transfer to components

--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
@@ -1,6 +1,8 @@
 ---
 description: Steps to upgrade from open source Calico to Calico Enterprise.
 ---
+
+import UpgradeOperatorSimpleTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/UpgradeOperatorSimple-temp';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
@@ -43,12 +45,12 @@ GKE upgrades from open source Calico are not currently supported.
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<UpgradeOperatorSimple upgradeFrom='OpenSource' />
+<UpgradeOperatorSimpleTemp upgradeFrom='OpenSource' />
 
 </TabItem>
 <TabItem label="EKS" value="EKS-1">
 
-<UpgradeOperatorSimple
+<UpgradeOperatorSimpleTemp
   upgradeFrom='OpenSource'
   provider='EKS'
 />
@@ -64,7 +66,7 @@ The following instructions are only for AKS clusters that use a Kubernetes recon
 
 These upgrade instructions will upgrade your AKS clusters with Azure CNI and an AKS-managed Calico installation.
 
-<UpgradeOperatorSimple
+<UpgradeOperatorSimpleTemp
   upgradeFrom='OpenSource'
   provider='AKS'
 />
