--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/eks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/eks.mdx
@@ -2,6 +2,8 @@
 description: Enable Calico network policy in EKS.
 ---
 
+import InstallEKSTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallEKS-temp.js';
+
 # Amazon Elastic Kubernetes Service (EKS)
 
 ## Big picture
@@ -46,7 +48,7 @@ Install {{prodname}} on an EKS managed Kubernetes cluster.
 1. [Option B: Install with Calico CNI networking](#install-eks-with-calico-networking)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 
-<InstallEKS clusterType='standalone' />
+<InstallEKSTemp clusterType='standalone' />
 
 ## Next steps
 
