--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
@@ -2,6 +2,10 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster on Windows nodes
 ---
 
+import InstallOpenshiftBeforeYouBeginTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenshiftBeforeYouBegin-temp';
+import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShift-temp';
+
+
 # Calico Enterprise for Windows on an OpenShift 4 cluster (manual install)
 
 :::note
@@ -24,7 +28,7 @@ Augments the applicable steps in the [OpenShift documentation](https://cloud.red
 
 ## Before you begin
 
-<InstallOpenshiftBeforeYouBegin clusterOS='hybrid' />
+<InstallOpenshiftBeforeYouBeginTemp clusterOS='hybrid' />
 
 ## How to
 
@@ -42,7 +46,7 @@ Augments the applicable steps in the [OpenShift documentation](https://cloud.red
 1. [Install {{prodnameWindows}}](#install-calico-enterprise-for-windows)
 1. [Configure kubelet](#configure-kubelet)
 
-<InstallOpenShift
+<InstallOpenShiftTemp
   clusterType='standalone'
   clusterOS='hybrid'
 />
