--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -2,6 +2,10 @@
 description: Steps to upgrade from open source Calico to Calico Enterprise on OpenShift.
 ---
 
+import InstallOpenShiftManifestsTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShiftManifests-temp';
+import OpenShiftPullSecretTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/OpenShiftPullSecret-temp';
+import OpenShiftPrometheusOperatorTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/OpenShiftPrometheusOperator-temp';
+
 # Upgrade from Calico to Calico Enterprise on OpenShift
 
 ## Prerequisites
@@ -38,11 +42,11 @@ Make the manifests directory.
 mkdir manifests
 ```
 
-<InstallOpenShiftManifests upgradeFrom='OpenSource' />
+<InstallOpenShiftManifestsTemp upgradeFrom='OpenSource' />
 
 **Add an image pull secret**
 
-<OpenShiftPullSecret />
+<OpenShiftPullSecretTemp />
 
 > (Optional) If your cluster architecture requires any custom [{{prodname}} resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).
 
@@ -90,7 +94,7 @@ Install the {{prodname}} license provided to you by Tigera.
 oc create -f </path/to/license.yaml>
 ```
 
-<OpenShiftPrometheusOperator upgradeFrom='OpenSource' />
+<OpenShiftPrometheusOperatorTemp upgradeFrom='OpenSource' />
 
 You can now monitor progress with the following command:
 
