--- a/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -2,10 +2,17 @@
 description: Create a Calico Enterprise managed cluster that you can control from you management cluster.
 ---
 
-# Create a Calico Enterprise managed cluster
-
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGeneric-temp';
+import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGKE-temp';
+import InstallEKSTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallEKS-temp';
+import InstallAKSTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallAKS-temp';
+import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShift-temp';
+
+
+
+# Create a Calico Enterprise managed cluster
 
 ## Big picture
 
@@ -42,27 +49,27 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<InstallGeneric clusterType='managed' />
+<InstallGenericTemp clusterType='managed' />
 
 </TabItem>
 <TabItem label="GKE" value="GKE-1">
 
-<InstallGKE clusterType='managed' />
+<InstallGKETemp clusterType='managed' />
 
 </TabItem>
 <TabItem label="EKS" value="EKS-2">
 
-<InstallEKS clusterType='managed' />
+<InstallEKSTemp clusterType='managed' />
 
 </TabItem>
 <TabItem label="AKS" value="AKS-3">
 
-<InstallAKS clusterType='managed' />
+<InstallAKSTemp clusterType='managed' />
 
 </TabItem>
 <TabItem label="Openshift" value="Openshift-4">
 
-<InstallOpenShift clusterType='managed' />
+<InstallOpenShiftTemp clusterType='managed' />
 
 </TabItem>
 
