--- a/calico-enterprise_versioned_docs/version-3.18-2/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/operations/clis/calicoq/installing.mdx
@@ -2,6 +2,8 @@
 description: Install the CLI for Calico Enterprise.
 ---
 
+import MaintenanceClisCalicoqInstallingTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/MaintenanceClisCalicoqInstalling-temp.js';
+
 # Install calicoq
 
 ## About installing calicoq
@@ -37,7 +39,7 @@ corresponds to your desired deployment.
 
 1. Use the following command to download the `calicoq` binary.
 
-   <MaintenanceClisCalicoqInstalling />
+   <MaintenanceClisCalicoqInstallingTemp />
 
 1. Set the file to be executable.
 
