DOCS-RN-fix-3.18-2

--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -16,6 +16,10 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 
 ## New features and enhancements
 
+### New flow logs panel for the Endpoints page
+
+We've add a link to view flow logs for a selected endpoint on the Endpoints page in Manager UI.
+
 ### Security event management
 
 We've added a new Security event management dashboard for threat detection.
