Fix typo in prodnameWindows var

--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/requirements.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/requirements.mdx
@@ -118,7 +118,7 @@ The manual method for installing {{prodnameWindows}} is deprecated in favor of u
 ### AKS requirements
 
 - {{prodnameWindows}} can be enabled only on newly created clusters.
-- Non-HPC {{prodnameWindows} is available with Kubernetes version 1.20 or later
+- Non-HPC {{prodnameWindows}} is available with Kubernetes version 1.20 or later
 
 ## Next steps
 
