--- a/calico-cloud_versioned_docs/version-18-2/reference/installation/_api.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/reference/installation/_api.mdx
@@ -3181,6 +3181,25 @@ This field is required for clusters using external ES.
 
 </td>
 </tr>
+<tr>
+<td>
+
+<code>controlPlaneReplicas</code><br/>
+<em>
+int32
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+ControlPlaneReplicas defines how many replicas of the control plane core components will be deployed
+in the Tenant&rsquo;s namespace. Defaults to the controlPlaneReplicas in Installation CR
+</p>
+
+</td>
+</tr>
 </table>
 </td>
 </tr>
@@ -12551,6 +12570,25 @@ TenantElasticSpec
 <p>
 Elastic configures per-tenant ElasticSearch and Kibana parameters.
 This field is required for clusters using external ES.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>controlPlaneReplicas</code><br/>
+<em>
+int32
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+ControlPlaneReplicas defines how many replicas of the control plane core components will be deployed
+in the Tenant&rsquo;s namespace. Defaults to the controlPlaneReplicas in Installation CR
 </p>
 
 </td>
