DOCS-1811: Publishes OS 3.27 - updates to release notes - production changes to archive OS 3.24

--- a/calico_versioned_docs/version-3.27/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.27/release-notes/index.mdx
@@ -1,5 +1,6 @@
 ---
 description: Release notes for Calico Open Source
+title: Release notes
 ---
 
 # Calico Open Source 3.27 release notes
@@ -10,8 +11,7 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 
 ### HPC-based Windows install and upgrade
 
-We've added support for Operator-based install and upgrade for Windows nodes using HPC (HostProcess/Privileged containers)/
-{{prodname}} can now bootstrap Windows worker nodes just like Linux worker nodes.
+We've added support for Operator-based install and upgrade for Windows nodes using HPC (HostProcess/Privileged containers), {{prodname}} can now bootstrap Windows worker nodes just like Linux worker nodes.
 Platform engineers can scale Windows worker nodes with an auto-scaling node pool without bootstrapping each node manually, and upgrade {{prodname}} deployments without manually upgrading nodes one at a time.
 
 For more information, see [the {{prodnameWindows}} Operator guide](../getting-started/kubernetes/windows-calico/operator.mdx).
@@ -21,7 +21,7 @@ For more information, see [the {{prodnameWindows}} Operator guide](../getting-st
 We've add supported for Azure CNI with overlay networking for AKS clusters.
 This option augments support for the Azure CNI with no overlay where a VNet IP address is assigned to every pod, which can lead to IP address exhaustion.
 
-To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/kubernetes/managed-public-cloud/aks).
+To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/kubernetes/managed-public-cloud/aks.mdx).
 
 ### Calico with VPP data plane is generally available
 
@@ -56,6 +56,15 @@ For more information, see [Selector performance in EntityRules](../reference/res
  - Add support for OpenStack on Ubuntu Jammy [calico #7622](https://github.com/projectcalico/calico/pull/7622) (@danudey)
  - BPF mode: add felix configuration parameter to allow NOTRACK to be disabled for certain external interfaces interfaces.  Useful for workaround conflicts with non-Calico networked containers etc. [calico #7595](https://github.com/projectcalico/calico/pull/7595) (@StevenTigera)
  - Expose the configuration for the CSI plugin in the operator helm chart [calico #7480](https://github.com/projectcalico/calico/pull/7480) (@nimimeht)
+ - Update upstream CNI plugins and Flannel downloads to latest golang patches [calico #8303](https://github.com/projectcalico/calico/pull/8303) (@matthewdupre)
+ - Remove the policy index from the correct jump map [calico #8282](https://github.com/projectcalico/calico/pull/8282) (@sridhartigera)
+ - Avoid conntrack cleanup of IPv6 host networked workloads. (#8272) [calico #8273](https://github.com/projectcalico/calico/pull/8273) (@sridhartigera)
+ - eBPF: ClusterIP reflects InternalTrafficPolicy=Local [calico #8262](https://github.com/projectcalico/calico/pull/8262) (@tomastigera)
+ - Add openstack publishing promotion [v3.27] [calico #8261](https://github.com/projectcalico/calico/pull/8261) (@danudey)
+ - Bump k8s dependency to v1.27.8 [calico #8246](https://github.com/projectcalico/calico/pull/8246) (@hjiawei)
+ - Node learns about its ipv6 address in Kubernetes even if BGP is turned off and CNI is not Calico.
+ - eBPF: kube-proxy ServiceInternalTrafficPolicy is now GA and setting the gate would generate a warning message. [calico #8242](https://github.com/projectcalico/calico/pull/8242) (@tomastigera)
+ - eBPF: fixed policy cleanup after felix restart if a device is not present anymore [calico #8231](https://github.com/projectcalico/calico/pull/8231) (@fasaxc)
 
 ## Technology preview features
 
@@ -98,7 +107,7 @@ For more information, see [Enable the eBPF data plane](../operations/ebpf/enabli
 
 ### Calico Open Source 3.27.0 general availability release
 
-DD November 2023
+December 12, 2023
 
 Calico Open Source release 3.27.0 is now generally available.
 
