--- a/calico-cloud/reference/resources/containeradmissionpolicy.mdx
+++ b/calico-cloud/reference/resources/containeradmissionpolicy.mdx
@@ -51,7 +51,7 @@ spec:
 
 | Field             | Description                                                                                         | Accepted Values | Schema                | Default |
 |-------------------|-----------------------------------------------------------------------------------------------------|-----------------|-----------------------|---------|
-| order             | Controls the order of precedence. {{site.prodname}} applies the policy with the lowest value first. |                 | float                 |         |
+| order             | Controls the order of precedence. {{prodname}} applies the policy with the lowest value first. |                 | float                 |         |
 | selector          | Selects the resources to which this policy applies.                                                 |                 | [selector](#selector) | all()   |
 | namespaceSelector | Selects the namespace to which this policy applies.                                                 |                 | [selector](#selector) | all()   |
 | rules             | Ordered list of rules applied by this policy.                                                       |                 | List of [Rule](#rule) |         |
@@ -71,7 +71,7 @@ A single rule matches a set of pod creating resources and applies some action to
 
 A label selector is an expression which either matches or does not match a resource based on its labels.
 
-{{site.prodname}} label selectors support a number of operators, which can be combined into larger expressions
+{{prodname}} label selectors support a number of operators, which can be combined into larger expressions
 using the boolean operators and parentheses.
 
 | Expression                | Meaning                     |
