--- a/calico-cloud_versioned_docs/version-18/networking/egress/egress-gateway-aws.mdx
+++ b/calico-cloud_versioned_docs/version-18/networking/egress/egress-gateway-aws.mdx
@@ -765,7 +765,7 @@ EOF
 ```
 
 - `replicas: 2` tells Kubernetes to schedule two egress gateways in the "red" cluster.
-- ipPools tells {{site.prodname}} IPAM to use one of the "red" IP pools:
+- ipPools tells {{prodname}} IPAM to use one of the "red" IP pools:
 
   ```yaml
   ipPools:
