DOCS-WAF-links-using-variables

--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -183,9 +183,9 @@ The default rulesets work fine for most deployments. However, you can customize 
 
 By default, {{prodname}} ships with CoreRuleset v3.x with the following setup files pre-loaded:
 
-- [modsecdefault.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/modsec-core-ruleset/modsecdefault.conf)
-- [crs-setup.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/modsec-core-ruleset/crs-setup.conf)
-- [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/modsec-core-ruleset)
+- [modsecdefault.conf](https://github.com/tigera/operator/tree/{{tigeraOperator.version}}/pkg/render/applicationlayer/coreruleset/modsecdefault.conf)
+- [crs-setup.conf](https://github.com/tigera/operator/tree/{{tigeraOperator.version}}/pkg/render/applicationlayer/coreruleset/crs-setup.conf)
+- [Ruleset files](https://github.com/tigera/operator/tree/{{tigeraOperator.version}}/pkg/render/applicationlayer/coreruleset/rules)
 
 To start creating your rules, it is recommended that you download the files (all three) and create your modifications from there, as follows:
 
