Changes syntax for componentImage component

--- a/calico-cloud/_includes/content/_non-cluster-binary-install.mdx
+++ b/calico-cloud/_includes/content/_non-cluster-binary-install.mdx
@@ -14,7 +14,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 1. Use the following command to download the {variables.nodecontainer} image.
 
    <CodeBlock language='bash'>
-   docker pull {variables.registry}{% component_image("cnx-node") %}
+   docker pull {variables.registry}%% component_image("cnx-node") %%
    </CodeBlock>
 
 1. Confirm that the image has loaded by typing `docker images`.
@@ -27,7 +27,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 1. Create a temporary {variables.nodecontainer} container.
 
    <CodeBlock language='bash'>
-   docker create --name container {variables.registry}{% component_image("cnx-node") %}
+   docker create --name container {variables.registry}%% component_image("cnx-node") %%
    </CodeBlock>
 
 1. Copy the calico-node binary from the container to the local file system.
