--- a/calico-enterprise/operations/clis/calicoctl/install.mdx
+++ b/calico-enterprise/operations/clis/calicoctl/install.mdx
@@ -274,7 +274,7 @@ If you run these commands from your local machine (instead of a host node), some
    registry.
 
    <CodeBlock language='bash'>
-   docker pull {variables.registry}{% component_image("calicoctl") %}
+   docker pull {variables.registry}%% component_image("calicoctl") %%
    </CodeBlock>
 
 1. Confirm that the image has loaded by typing `docker images`.
