--- a/calico-enterprise_versioned_docs/version-3.16/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/operations/clis/calicoq/installing.mdx
@@ -91,7 +91,7 @@ corresponds to your desired deployment.
    registry.
 
    <CodeBlock language='bash'>
-   docker pull {variables.registry}{% component_image("calicoq") %}
+   docker pull {variables.registry}%% component_image("calicoq") %%
    </CodeBlock>
 
 1. Confirm that the image has loaded by typing `docker images`.
