--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
@@ -769,7 +769,7 @@ spec:
       initContainers:
       - name: egress-gateway-init
         command: ["/init-gateway.sh"]
-        image: {variables.registry}{% component_image("egress-gateway") %}
+        image: {variables.registry}%% component_image("egress-gateway") %%
         env:
         - name: EGRESS_POD_IP
           valueFrom:
@@ -786,7 +786,7 @@ spec:
       containers:
       - name: egress-gateway
         command: ["/start-gateway.sh"]
-        image: {variables.registry}{% component_image("egress-gateway") %}
+        image: {variables.registry}%% component_image("egress-gateway") %%
         env:
          # Optional: comma-delimited list of IP addresses to send ICMP pings to; if all probes fail, the egress
          # gateway will report non-ready.
