--- a/calico-enterprise_versioned_docs/version-3.17/_includes/content/_docker-container-service.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/content/_docker-container-service.mdx
@@ -41,7 +41,7 @@ ExecStart=/usr/bin/docker run --net=host --privileged \
  -v /run/docker/plugins:/run/docker/plugins \
  -v /lib/modules:/lib/modules \
  -v /etc/pki:/pki \
- {variables.registry}{% component_image("cnx-node") %} /bin/calico-node -felix
+ {variables.registry}%% component_image("cnx-node") %% /bin/calico-node -felix
 
 ExecStop=-/usr/bin/docker stop {variables.noderunning}
 
